Bugfix/tc 359  aside hrule alignment (#527)
* TC-259: required custom top margin value

* TC-359: a more USWDS favored fix

--- a/source/_patterns/03-organisms/sections/text-section-aside/_text-section-aside.scss
+++ b/source/_patterns/03-organisms/sections/text-section-aside/_text-section-aside.scss
@@ -29,7 +29,8 @@
       @include u-font(heading, 12);
 
       @include at-media(desktop) {
-        @include u-padding-bottom(4);
+        padding-top: 1.1rem;
+        @include u-padding-bottom(2);
         @include has-dash-position($dash-color: "mint-cool-50v", $dash-position: "right");
       }
     }
